add sound effect

--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,4 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 /team-mohawk-a4-platformer/Mission Impossible Theme (Full Theme).mp4
+/team-mohawk-a4-platformer/Program.cs
